--- a/arch/arm/configs/aoscp_athene_defconfig
+++ b/arch/arm/configs/aoscp_athene_defconfig
@@ -3442,6 +3442,7 @@ CONFIG_INOTIFY_USER=y
 # CONFIG_AUTOFS4_FS is not set
 CONFIG_FUSE_FS=y
 # CONFIG_CUSE is not set
+CONFIG_ADRENO_IDLER=y
 
 #
 # Caches
