--- a/arch/arm/configs/aoscp_athene_defconfig
+++ b/arch/arm/configs/aoscp_athene_defconfig
@@ -180,9 +180,8 @@ CONFIG_COMPAT_BRK=y
 # CONFIG_SLAB is not set
 CONFIG_SLUB=y
 # CONFIG_SLOB is not set
-CONFIG_PROFILING=y
+# CONFIG_PROFILING is not set
 CONFIG_TRACEPOINTS=y
-CONFIG_OPROFILE=y
 CONFIG_HAVE_OPROFILE=y
 CONFIG_KPROBES=y
 # CONFIG_JUMP_LABEL is not set
@@ -212,6 +211,10 @@ CONFIG_HAVE_CONTEXT_TRACKING=y
 CONFIG_HAVE_IRQ_TIME_ACCOUNTING=y
 CONFIG_HAVE_MOD_ARCH_SPECIFIC=y
 CONFIG_MODULES_USE_ELF_REL=y
+CONFIG_HAVE_ARCH_MMAP_RND_BITS=y
+CONFIG_ARCH_MMAP_RND_BITS_MIN=8
+CONFIG_ARCH_MMAP_RND_BITS_MAX=16
+CONFIG_ARCH_MMAP_RND_BITS=16
 CONFIG_CLONE_BACKWARDS=y
 CONFIG_OLD_SIGSUSPEND3=y
 CONFIG_OLD_SIGACTION=y
@@ -1756,7 +1759,7 @@ CONFIG_UNIX98_PTYS=y
 CONFIG_SERIAL_CORE=y
 CONFIG_SERIAL_CORE_CONSOLE=y
 # CONFIG_SERIAL_MSM is not set
-CONFIG_SERIAL_MSM_HS=y
+# CONFIG_SERIAL_MSM_HS is not set
 CONFIG_SERIAL_MSM_HSL=y
 CONFIG_SERIAL_MSM_HSL_CONSOLE=y
 # CONFIG_SERIAL_BCM_BT_LPM is not set
@@ -2946,7 +2949,7 @@ CONFIG_RMNET_SMD_CTL_CHANNEL=""
 CONFIG_RMNET_SMD_DATA_CHANNEL=""
 CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
-CONFIG_MMC_PERF_PROFILING=y
+# CONFIG_MMC_PERF_PROFILING is not set
 CONFIG_MMC_UNSAFE_RESUME=y
 CONFIG_MMC_CLKGATE=y
 CONFIG_MMC_EMBEDDED_SDIO=y
@@ -3459,6 +3462,7 @@ CONFIG_F2FS_FS_POSIX_ACL=y
 CONFIG_F2FS_FS_SECURITY=y
 # CONFIG_F2FS_CHECK_FS is not set
 # CONFIG_F2FS_FS_ENCRYPTION is not set
+CONFIG_F2FS_EMULATED_SD=y
 CONFIG_FS_POSIX_ACL=y
 CONFIG_FILE_LOCKING=y
 CONFIG_FSNOTIFY=y
