--- a/arch/arm/configs/aoscp_athene_defconfig
+++ b/arch/arm/configs/aoscp_athene_defconfig
@@ -1121,7 +1121,7 @@ CONFIG_CFG80211_INTERNAL_REGDB=y
 # CONFIG_NFC is not set
 # CONFIG_NFC_QNCI is not set
 # CONFIG_NFC_NQ is not set
-CONFIG_BCM2079X=y
+# CONFIG_BCM2079X is not set
 CONFIG_IPC_ROUTER=y
 CONFIG_IPC_ROUTER_SECURITY=y
 CONFIG_HAVE_BPF_JIT=y
@@ -1618,7 +1618,7 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_ADS7846 is not set
 # CONFIG_TOUCHSCREEN_AD7877 is not set
 # CONFIG_TOUCHSCREEN_AD7879 is not set
-CONFIG_TOUCHSCREEN_ATMEL_MXT=y
+# CONFIG_TOUCHSCREEN_ATMEL_MXT is not set
 # CONFIG_TOUCHSCREEN_ATMEL_MAXTOUCH_TS is not set
 # CONFIG_TOUCHSCREEN_AUO_PIXCIR is not set
 # CONFIG_TOUCHSCREEN_BU21013 is not set
@@ -1654,15 +1654,15 @@ CONFIG_TOUCHSCREEN_ATMEL_MXT=y
 # CONFIG_TOUCHSCREEN_W90X900 is not set
 # CONFIG_TOUCHSCREEN_ST1232 is not set
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
-CONFIG_TOUCHSCREEN_FT5X06=y
+# CONFIG_TOUCHSCREEN_FT5X06 is not set
 # CONFIG_TOUCHSCREEN_FT5X06_PSENSOR is not set
 # CONFIG_TOUCHSCREEN_FT5X06_GESTURE is not set
-CONFIG_TOUCHSCREEN_MSTAR21XX=y
+# CONFIG_TOUCHSCREEN_MSTAR21XX is not set
 CONFIG_TOUCHSCREEN_GEN_VKEYS=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4 is not set
-CONFIG_SECURE_TOUCH=y
+# CONFIG_SECURE_TOUCH is not set
 # CONFIG_TOUCHSCREEN_GT9XX is not set
-CONFIG_TOUCHSCREEN_BU21150=y
+# CONFIG_TOUCHSCREEN_BU21150 is not set
 CONFIG_INPUT_MT_WRAPPER=y
 # CONFIG_TOUCHSCREEN_IT7260_I2C is not set
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C=y
@@ -1701,14 +1701,14 @@ CONFIG_INPUT_GPIO=y
 # CONFIG_SENSORS_MMA8X5X is not set
 # CONFIG_SENSORS_AP3426 is not set
 # CONFIG_SENSORS_LTR553 is not set
-CONFIG_SENSORS_MMC3416X=y
+# CONFIG_SENSORS_MMC3416X is not set
 # CONFIG_SENSORS_AKM09911 is not set
 # CONFIG_SENSORS_AKM8963 is not set
 # CONFIG_SENSORS_STK3X1X is not set
-CONFIG_SENSORS_CAPELLA_CM36283=y
+# CONFIG_SENSORS_CAPELLA_CM36283 is not set
 # CONFIG_SENSORS_BMA2X2 is not set
-CONFIG_SENSORS_MC3430=y
-CONFIG_SENSORS_ISL29044A=y
+# CONFIG_SENSORS_MC3430 is not set
+# CONFIG_SENSORS_ISL29044A it not set
 CONFIG_STMVL53L0=y
 CONFIG_EPL8802=y
 CONFIG_SENSORS_FPC_1020=y
@@ -1730,12 +1730,7 @@ CONFIG_SERIO_LIBPS2=y
 # Character devices
 #
 CONFIG_TTY=y
-CONFIG_VT=y
-CONFIG_CONSOLE_TRANSLATIONS=y
-CONFIG_VT_CONSOLE=y
-CONFIG_VT_CONSOLE_SLEEP=y
-CONFIG_HW_CONSOLE=y
-# CONFIG_VT_HW_CONSOLE_BINDING is not set
+# CONFIG_VT is not set
 CONFIG_UNIX98_PTYS=y
 # CONFIG_DEVPTS_MULTIPLE_INSTANCES is not set
 # CONFIG_LEGACY_PTYS is not set
